--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -1,4 +1,5 @@
 h1 課題一覧
+= link_to "課題登録", new_task_management_path
 
 table
   thead
@@ -9,6 +10,5 @@ table
   tbody
     - @task_managements.each do |task|
       tr
-        td task.title
-        td task.deadline
-= link_to "課題登録", new_task_management_path
+        td = task.title
+        td = task.deadline
