エラーメッセージ追加

--- a/app/views/task_managements/new.html.slim
+++ b/app/views/task_managements/new.html.slim
@@ -1,4 +1,9 @@
 = form_for @task_management do |f|
+  -if @task_management.errors.any?
+  ul
+    - @task_management.errors.full_messages.each do |message|
+      li = message
+
   = f.submit "課題登録"
   p
   = f.label :title, "タイトル"
