--- a/app/views/task_managements/new.html.slim
+++ b/app/views/task_managements/new.html.slim
@@ -1,8 +1,8 @@
 = form_for @task_management do |f|
-  -if @task_management.errors.any?
-  ul
-    - @task_management.errors.full_messages.each do |message|
-      li = message
+  - if @task_management.errors.any?
+    ul
+      - @task_management.errors.full_messages.each do |message|
+        li = message
 
   = f.submit "課題登録"
   p
@@ -13,4 +13,4 @@
   = f.text_field :deadline
   p
   = f.label :memo, "メモ"
-  = f.text_field :memo
+  = f.text_area :memo
