--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -11,5 +11,5 @@ table
   tbody
     - @task_managements.each do |task|
       tr
-        td = link_to task.title, task_management_path(task.id)
+        td = link_to task.title, task_management_path(task)
         td = task.deadline
