Closes #5 課題編集画面を作成する

--- a/app/views/task_managements/new.html.slim
+++ b/app/views/task_managements/new.html.slim
@@ -1,16 +1,3 @@
-= form_for @task_management do |f|
-  - if @task_management.errors.any?
-    ul
-      - @task_management.errors.full_messages.each do |message|
-        li = message
+h2 課題登録
 
-  = f.submit "課題登録"
-  p
-  = f.label :title, "タイトル"
-  = f.text_field :title
-  p
-  = f.label :deadline, "期日"
-  = f.text_field :deadline
-  p
-  = f.label :memo, "メモ"
-  = f.text_area :memo
+= render partial: "form", locals: { submit: "登録" }
