Closes #6 課題にステータスの概念を持たせる

--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -7,9 +7,11 @@ table
     tr
       th タイトル
       th 期日
+      th ステータス
 
   tbody
     - @task_managements.each do |task|
       tr
         td = link_to task.title, task_management_path(task)
         td = task.deadline
+        td = task.status
