--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -14,4 +14,4 @@ table
       tr
         td = link_to task.title, task_management_path(task)
         td = task.deadline
-        td = task.status
+        td = task.status_i18n
