--- a/app/views/task_managements/new.html.slim
+++ b/app/views/task_managements/new.html.slim
@@ -1,3 +1,5 @@
 h2 課題登録
-
-= render partial: "form", locals: { submit: "登録" }
+= form_for @task_management do |f|
+  = f.submit "登録"
+  p
+  = render partial: "form", locals: { f: f }
