--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -1,5 +1,12 @@
 = notice
 h1 課題一覧
+= form_with(url: task_managements_path, method: :get, local: true) do |f|
+  = f.label :search_title, "タイトル"
+  = f.text_field :search_title
+  p
+  = f.label :search_status, "ステータス"
+  = f.select :search_status, TaskManagement.statuses_i18n.invert, prompt: ""
+  = f.submit '検索'
 = link_to "課題登録", new_task_management_path
 
 table
