Closes #8 一覧画面で着手完了にできること

--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -10,8 +10,10 @@ h1 課題一覧
 = link_to "課題登録", new_task_management_path
 
 table
+
   thead
     tr
+      th ステータス変更
       th タイトル
       th 期日
       th ステータス
@@ -19,6 +21,14 @@ table
   tbody
     - @task_managements.each do |task|
       tr
+        td
+          = form_with url: status_update_task_management_path(task) do |f|
+            - if task.status == "backlog"
+              = f.hidden_field :status, value: "wip"
+              = f.submit "着手"
+            - elsif task.status == "wip"
+              = f.hidden_field :status, value: "closed"
+              = f.submit "完了"
         td = link_to task.title, task_management_path(task)
         td = task.deadline
         td = task.status_i18n
