--- a/app/views/task_managements/index.html.slim
+++ b/app/views/task_managements/index.html.slim
@@ -32,6 +32,5 @@ table
               = f.submit "完了"
         td = link_to task.title, task_management_path(task)
         td = task.deadline
-        td = "期限切れ" if task.deadline.past?
-
+        td = "期限切れ" if task.deadline < Date.today
         td = task.status_i18n
